@@ -2,6 +2,7 @@ DocImport 1.0.1
 ================================================================================
 # [HIGH] The component's menu item was removed if the installation couldn't proceed (too low PHP or Joomla! version)
 # [HIGH] Joomla! doesn't run the database upgrade scripts when upgrading from a very old version or when the #__schemas entry is somehow missing
+# [HIGH] After a failed installation, even if the subsequent installation is reported successful Joomla! does not install the database tables causing a broken installation
 # [MEDIUM] The reason why the installation was aborted is not shown due to a Joomla! bug; worked around
 
 DocImport 1.0.0
